@@ -1,7 +1,7 @@
 Package: RcppSpdlog
 Type: Package
 Title: 'spdlog' C++ Header Library for Logging
-Version: 0.0.2
+Version: 0.0.2.1.20200928
 Date: 2020-09-17
 Authors@R: c(
  person("Dirk", "Eddelbuettel", role = c("aut", "cre", "cph"), email = "edd@debian.org"),
